Working external links

--- a/ConsumeDiscogsAPI/Views/Home/Index.cshtml
+++ b/ConsumeDiscogsAPI/Views/Home/Index.cshtml
@@ -31,7 +31,7 @@
                             <td>@record.CatNo</td>
                             <td>@record.Genre</td>
                             <td>@record.Style</td>
-                            <td>View on Discogs button</td>
+                            <td><a href="@record.DiscogsUrl" class="btn btn-secondary" target="_blank">Discogs</a></td>
                         </tr>
                     }
                 </tbody>
