--- a/ConsumeDiscogsAPI/Views/Home/Index.cshtml
+++ b/ConsumeDiscogsAPI/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 
 <div class="container">
     <h1 class="display-4">Welcome to Chriscogs</h1>
-    <p>Peruse my vinyl records wantlist below to find your next present for me.</p>
+    <p>Peruse my vinyl record wantlist to find your next present for me.</p>
     <div class="row mt-3">
         <div class="col-md-12">
-            <table id="wantlist" class="display table table-striped table-responsive-md" style="width:100%">
+            <table id="wantlist" class="display" style="width:100%">
                 <thead>
                     <tr>
                         <th>@Html.DisplayNameFor(model => model.FirstOrDefault().Artist)</th>
@@ -36,8 +36,5 @@
                 </tbody>
             </table>
         </div>
-
-
     </div>
-
 </div>
